<resources>
    <string name="app_name">GADS Leaderboard</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <string name="learner_name">Learner Name</string>
    <string name="learner_info">Learning hours, Country</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_link">Project on GITHUB (link)</string>
    <string name="submit_button">Submit</string>
    <string name="dialog_confirm_text">Are you sure?</string>
    <string name="dialog_success_text">Submission Successful</string>
    <string name="dialog_error_text">Submission not Successful</string>
</resources>